--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,7 +1,26 @@
+# Files in the config/locales directory are used for internationalization
+# and are automatically loaded by Rails. If you want to use locales other
+# than English, add the necessary files in this directory.
+#
+# To use the locales, use `I18n.t`:
+#
+#     I18n.t 'hello'
+#
+# In views, this is aliased to just `t`:
+#
+#     <%= t('hello') %>
+#
+# To use a different locale, set it with `I18n.locale`:
+#
+#     I18n.locale = :es
+#
+# This would use the information in config/locales/es.yml.
+#
+# To learn more, please read the Rails Internationalization guide
+# available at http://guides.rubyonrails.org/i18n.html.
+
 en:
-  shoppe:
-    
-    navigation:
+   navigation:
       admin_primary:
         orders: Orders
         products: Products
@@ -9,7 +28,6 @@ en:
         delivery_services: Delivery Services
         tax_rates: Tax Rates
         users: Users
-        clients: Clients
         countries: Countries
         settings: Settings
         
@@ -43,4 +61,3 @@ en:
         currency_unit: $
         tax_name: Tax
         demo_mode: false
-        
